--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "buildprod": "rm -rf ./dist && rm -rf /var/www/html/* && tsc && vite build && cp -r ./dist/* /var/www/html",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
